--- a/app/src/main/res/layout/fragment_token_balances.xml
+++ b/app/src/main/res/layout/fragment_token_balances.xml
@@ -34,7 +34,7 @@
             android:id="@+id/manage_viewing_keys_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Manage Keys"
+            android:text="Manage Tokens"
             android:textSize="10sp"
             android:textColor="@android:color/white"
             android:background="@drawable/card_rounded_bg"
