--- a/app/src/main/res/layout/fragment_token_balances.xml
+++ b/app/src/main/res/layout/fragment_token_balances.xml
@@ -9,7 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="30dp">
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="30dp">
 
         <!-- Token Balances Section Header -->
         <TextView
