--- a/app/src/main/res/layout/fragment_anml_claim.xml
+++ b/app/src/main/res/layout/fragment_anml_claim.xml
@@ -27,7 +27,7 @@
         android:paddingRight="20dp"
         android:background="@drawable/btn_anml_desktop"
         android:backgroundTint="@null"
-        android:text="Claim (Native)"
+        android:text="Claim"
         android:textColor="@color/anml_button_text"
         android:textAllCaps="false"
         android:textSize="20sp"
