--- a/app/src/main/res/drawable/button_pool_manage.xml
+++ b/app/src/main/res/drawable/button_pool_manage.xml
@@ -2,16 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="#f2f2f2" />
+            <solid android:color="#45a049" />
             <corners android:radius="8dp" />
-            <stroke android:width="2dp" android:color="#45a049" />
         </shape>
     </item>
     <item>
         <shape>
-            <solid android:color="#ffffff" />
+            <solid android:color="#4caf50" />
             <corners android:radius="8dp" />
-            <stroke android:width="2dp" android:color="#4caf50" />
         </shape>
     </item>
 </selector>
