--- a/app/src/main/res/layout/tab_liquidity_remove.xml
+++ b/app/src/main/res/layout/tab_liquidity_remove.xml
@@ -4,7 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:padding="20dp">
+    android:paddingTop="20dp"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp"
+    android:paddingBottom="40dp"
+    android:clipToPadding="false">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -91,6 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/button_rounded_green"
             android:padding="15dp"
             android:text="Remove Liquidity"
@@ -102,6 +107,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
             android:text="Note: Removing liquidity requires a 7-day unbonding period before you can claim your tokens."
             android:textColor="#666666"
